# sparql-client-rs

./: Cargo.toml  LICENSE  README.adoc
.github/workflows/: build.yml
sparql/: Cargo.toml
sparql-client-bin/: Cargo.toml
sparql-client-bin/src/: bin.rs
sparql-client-lib/: Cargo.toml
sparql-client-lib/src/: cli_model.rs  lib.rs  query_template.rs
sparql-client-lib/tests/: lib.rs  sparql_json.rs
sparql-client-rs/: Cargo.toml
sparql-client-rs/src/: json.rs  lib.rs
sparql-client-rs/tests/: lib.rs  sparql_json.rs
sparql-statements/: select-all-triples-limit-8.sparql  select-dbpedia-soccer-players.sparql
sparql/src/: bin.rs  cli_model.rs
src/: lib.rs
tests/common/: mod.rs
