[package]
name = "sparql-client-rs"
description = "Simple SPARQL client based on Actix-web"
version = "0.1.0"
authors = [
  "Jacobus Geluk <jacobus.geluk@agnos.ai>",
]
license = "MIT"
readme = "../README.adoc"
repository = "https://github.com/agnos-ai/sparql-client-rs"
homepage = "https://github.com/agnos-ai/sparql-client-rs"
keywords = ["sparql", "database", "rdf"]
categories = ["api-bindings", "database"]
edition = "2018"

[lib]
name = "sparql_client_rs"
path = "src/lib.rs"

[dependencies]
sophia = { version = "0.6.2", features = [ "sophia_iri" ] }
actix-web = { version = "3.3.2", features = ["openssl"] }
openssl = { version = "0.10.32", features = ["v110"] }
actix-rt = "1.1.1"
futures = "0.3.8"
env_logger = "0.8.2"
log = "0.4.11"
serde = "1.0.118"
serde_json = "1.0.61"
mime = "0.3.16"
structopt = "0.3.21"

[features]
default = []

